--- a/backend/package.json
+++ b/backend/package.json
@@ -1,28 +1,45 @@
 {
   "name": "foodies-app",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "API для кулінарних рецептів",
+  "main": "app.js",
   "type": "module",
   "scripts": {
     "start": "node app.js",
     "start:dev": "nodemon app.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "echo 'Build step completed'"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/AM1007/test_app.git"
   },
-  "author": "Andrew Motko",
+  "author": "Frontend Lovers",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/AM1007/test_app/issues"
   },
   "homepage": "https://github.com/AM1007/test_app#readme",
-  "devDependencies": {
-    "nodemon": "^3.1.9"
-  },
   "dependencies": {
-    "express": "^4.21.2"
+    "bcrypt": "^5.1.1",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
+    "express": "^4.21.2",
+    "gravatar": "^1.8.2",
+    "joi": "^17.11.0",
+    "jsonwebtoken": "^9.0.2",
+    "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.2",
+    "nanoid": "^5.1.5",
+    "nodemailer": "^6.10.1",
+    "pg": "^8.14.1",
+    "pg-hstore": "^2.3.4",
+    "sequelize": "^6.37.7",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.0"
+  },
+  "devDependencies": {
+    "cross-env": "^7.0.3",
+    "nodemon": "^3.1.9"
   }
 }
