--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,2 +1,23 @@
-PORT=
-APP_DOMAIN=
+# Сервер
+PORT=3000
+APP_DOMAIN=http://localhost:3000
+
+# База даних
+DATABASE_DIALECT=postgres
+DATABASE_USERNAME=ваш_username
+DATABASE_PASSWORD=ваш_password
+DATABASE_HOST=ваш_host
+DATABASE_NAME=ваша_база_даних
+DATABASE_PORT=5432
+
+# JWT
+JWT_SECRET=ваш_секретний_ключ
+JWT_EXPIRES_IN=7d
+JWT_REFRESH_SECRET=ваш_секретний_ключ_для_refresh
+JWT_REFRESH_EXPIRES_IN=30d
+
+# Пошта
+SMTP_HOST=smtp.gmail.com
+SMTP_PORT=587
+SMTP_USER=ваша_пошта@gmail.com
+SMTP_PASSWORD=ваш_пароль_для_застосунку
