--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,4 +1,2 @@
-# Assign Foodies App as the code owner for all files in the main branch
-
-- @AM1007
-- @ViktorSvertoka
+# Assign Foodies App as the code owner for all files
+* @AM1007 @ViktorSvertoka
