apped option to update avatar and store it in the cloudinary

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -21,3 +21,8 @@ SMTP_HOST=smtp.gmail.com
 SMTP_PORT=587
 SMTP_USER=ваша_пошта@gmail.com
 SMTP_PASSWORD=ваш_пароль_для_застосунку
+
+# Cloudinary
+CLOUDINARY_CLOUD_NAME=foodies-app
+CLOUDINARY_API_KEY=api_key
+CLOUDINARY_API_SECRET=api_secret
