--- a/backend/package.json
+++ b/backend/package.json
@@ -29,6 +29,7 @@
   "homepage": "https://github.com/AM1007/foodies_app#readme",
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "cloudinary": "^1.41.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
@@ -37,6 +38,7 @@
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.2",
+    "multer-storage-cloudinary": "^4.0.0",
     "nanoid": "^5.1.5",
     "nodemailer": "^6.10.1",
     "pg": "^8.14.1",
