fix: recipe model

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,28 +1,16 @@
-# Сервер
-PORT=3000
-APP_DOMAIN=http://localhost:3000
+PORT=
+APP_DOMAIN=
 
-# База даних
-DATABASE_DIALECT=postgres
-DATABASE_USERNAME=ваш_username
-DATABASE_PASSWORD=ваш_password
-DATABASE_HOST=ваш_host
-DATABASE_NAME=ваша_база_даних
-DATABASE_PORT=5432
+DATABASE_DIALECT=
+DATABASE_USERNAME=
+DATABASE_PASSWORD=
+DATABASE_HOST=
+DATABASE_NAME=
+DATABASE_PORT=
 
-# JWT
-JWT_SECRET=ваш_секретний_ключ
-JWT_EXPIRES_IN=7d
-JWT_REFRESH_SECRET=ваш_секретний_ключ_для_refresh
-JWT_REFRESH_EXPIRES_IN=30d
+JWT_SECRET=
+JWT_EXPIRES_IN=
 
-# Пошта
-SMTP_HOST=smtp.gmail.com
-SMTP_PORT=587
-SMTP_USER=ваша_пошта@gmail.com
-SMTP_PASSWORD=ваш_пароль_для_застосунку
-
-# Cloudinary
-CLOUDINARY_CLOUD_NAME=foodies-app
-CLOUDINARY_API_KEY=api_key
-CLOUDINARY_API_SECRET=api_secret
+CLOUDINARY_CLOUD_NAME=
+CLOUDINARY_API_KEY=
+CLOUDINARY_API_SECRET=
