--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,15 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
-
-    "modern-normalize": "^3.0.1",
-
-
+    "@reduxjs/toolkit": "^2.7.0",
     "axios": "^1.9.0",
-
     "clsx": "^2.1.1",
-
-
+    "modern-normalize": "^3.0.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-redux": "^9.2.0",
