--- a/backend/docs/paths/users/getCurrentUser.yaml
+++ b/backend/docs/paths/users/getCurrentUser.yaml
@@ -5,6 +5,7 @@ get:
   description:
     Приватний ендпоінт, який повертає інформацію про поточного авторизованого
     користувача.
+  operationId: getCurrentUser
   security:
     - bearerAuth: []
   responses:
