--- a/backend/docs/paths/users/getFollowing.yaml
+++ b/backend/docs/paths/users/getFollowing.yaml
@@ -5,6 +5,7 @@ get:
   description:
     Приватний ендпоінт для отримання списку користувачів, на яких підписаний
     поточний користувач.
+  operationId: getFollowing
   security:
     - bearerAuth: []
   responses:
