--- a/backend/docs/paths/users/getUserById.yaml
+++ b/backend/docs/paths/users/getUserById.yaml
@@ -6,6 +6,7 @@ get:
     Приватний ендпоінт для отримання детальної інформації про користувача. Якщо
     запитується інформація про поточного користувача, відображаються додаткові
     статистичні дані.
+  operationId: getUserById
   parameters:
     - name: id
       in: path
