--- a/backend/docs/paths/users/updateAvatar.yaml
+++ b/backend/docs/paths/users/updateAvatar.yaml
@@ -5,6 +5,7 @@ patch:
   description:
     Приватний ендпоінт для оновлення аватару поточного авторизованого
     користувача.
+  operationId: updateAvatar
   security:
     - bearerAuth: []
   requestBody:
