--- a/backend/docs/paths/areas/getAreas.yaml
+++ b/backend/docs/paths/areas/getAreas.yaml
@@ -1,16 +1,23 @@
-get:
-  tags:
-    - Areas
-  summary: Отримання списку регіонів походження страв
-  description:
-    Публічний ендпоінт для отримання повного списку регіонів (кухонь), доступних
-    в системі
-  responses:
-    '200':
-      description: Успішне отримання списку регіонів
-      content:
-        application/json:
-          schema:
-            type: array
-            items:
-              $ref: '../../components/schemas/areas/Area.yaml'
+tags:
+  - Areas
+summary: Отримання списку регіонів походження страв
+description:
+  Публічний ендпоінт для отримання повного списку регіонів (кухонь), доступних в
+  системі
+operationId: getAreas
+security: [] # Публічний ендпоінт
+responses:
+  '200':
+    description: Успішне отримання списку регіонів
+    content:
+      application/json:
+        schema:
+          type: array
+          items:
+            $ref: '../../components/schemas/areas/Area.yaml'
+  '400':
+    description: Неправильний запит
+    content:
+      application/json:
+        schema:
+          $ref: '../../components/schemas/Error.yaml'
