--- a/backend/docs/paths/auth/refresh.yaml
+++ b/backend/docs/paths/auth/refresh.yaml
@@ -3,6 +3,8 @@ post:
     - Auth
   summary: Оновлення токену
   description: Оновлення JWT токену за допомогою refresh токену
+  operationId: refreshToken
+  security: []
   requestBody:
     required: true
     content:
