--- a/backend/package.json
+++ b/backend/package.json
@@ -28,6 +28,7 @@
   },
   "homepage": "https://github.com/AM1007/foodies_app#readme",
   "dependencies": {
+    "@apidevtools/swagger-parser": "^10.1.1",
     "bcrypt": "^5.1.1",
     "cloudinary": "^1.41.3",
     "cors": "^2.8.5",
@@ -35,6 +36,7 @@
     "express": "^4.21.2",
     "gravatar": "^1.8.2",
     "joi": "^17.11.0",
+    "js-yaml": "^4.1.0",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.2",
