--- a/backend/package.json
+++ b/backend/package.json
@@ -30,6 +30,7 @@
   "dependencies": {
     "@apidevtools/swagger-parser": "^10.1.1",
     "bcrypt": "^5.1.1",
+    "chalk": "^5.4.1",
     "cloudinary": "^1.41.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
