--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,3 +1,3 @@
 # Assign Foodies App as the code owner for all files
 
-- @AM1007 @ViktorSvertoka @KomrakovaAnna
+* @AM1007 @ViktorSvertoka @KomrakovaAnna
